// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RunicKey component Matches snapshot: Elder Futhark 1`] = `
<section>
  <header>
    <h1>
      Elder Futhark
    </h1>
    <p>
      Translate runes to text
    </p>
  </header>
  <p>
    
  </p>
  <button
    onClick={[Function]}
  >
    ᚠ
  </button>
  <button
    onClick={[Function]}
  >
    ᚢ
  </button>
  <button
    onClick={[Function]}
  >
    ᚦ
  </button>
  <button
    onClick={[Function]}
  >
    ᚨ
  </button>
  <button
    onClick={[Function]}
  >
    ᚱ
  </button>
  <button
    onClick={[Function]}
  >
    ᚲ
  </button>
  <button
    onClick={[Function]}
  >
    ᚷ
  </button>
  <button
    onClick={[Function]}
  >
    ᚹ
  </button>
  <button
    onClick={[Function]}
  >
    ᚺ
  </button>
  <button
    onClick={[Function]}
  >
    ᚻ
  </button>
  <button
    onClick={[Function]}
  >
    ᚾ
  </button>
  <button
    onClick={[Function]}
  >
    ᛁ
  </button>
  <button
    onClick={[Function]}
  >
    ᛃ
  </button>
  <button
    onClick={[Function]}
  >
    ᛇ
  </button>
  <button
    onClick={[Function]}
  >
    ᛈ
  </button>
  <button
    onClick={[Function]}
  >
    ᛉ
  </button>
  <button
    onClick={[Function]}
  >
    ᛊ
  </button>
  <button
    onClick={[Function]}
  >
    ᛋ
  </button>
  <button
    onClick={[Function]}
  >
    ᛏ
  </button>
  <button
    onClick={[Function]}
  >
    ᛒ
  </button>
  <button
    onClick={[Function]}
  >
    ᛖ
  </button>
  <button
    onClick={[Function]}
  >
    ᛗ
  </button>
  <button
    onClick={[Function]}
  >
    ᛚ
  </button>
  <button
    onClick={[Function]}
  >
    ᛜ
  </button>
  <button
    onClick={[Function]}
  >
    ᛝ
  </button>
  <button
    onClick={[Function]}
  >
    ᛟ
  </button>
  <button
    onClick={[Function]}
  >
    ᛞ
  </button>
  <button
    onClick={[Function]}
  >
    :
  </button>
</section>
`;

exports[`RunicKey component Matches snapshot: Futhorc 1`] = `
<section>
  <header>
    <h1>
      Futhorc
    </h1>
    <p>
      Translate runes to text
    </p>
  </header>
  <p>
    
  </p>
  <button
    onClick={[Function]}
  >
    ᚠ
  </button>
  <button
    onClick={[Function]}
  >
    ᚢ
  </button>
  <button
    onClick={[Function]}
  >
    ᚦ
  </button>
  <button
    onClick={[Function]}
  >
    ᚩ
  </button>
  <button
    onClick={[Function]}
  >
    ᚱ
  </button>
  <button
    onClick={[Function]}
  >
    ᚳ
  </button>
  <button
    onClick={[Function]}
  >
    ᚷ
  </button>
  <button
    onClick={[Function]}
  >
    ᚹ
  </button>
  <button
    onClick={[Function]}
  >
    ᚻ
  </button>
  <button
    onClick={[Function]}
  >
    ᚾ
  </button>
  <button
    onClick={[Function]}
  >
    ᛁ
  </button>
  <button
    onClick={[Function]}
  >
    ᛡ
  </button>
  <button
    onClick={[Function]}
  >
    ᛄ
  </button>
  <button
    onClick={[Function]}
  >
    ᛇ
  </button>
  <button
    onClick={[Function]}
  >
    ᛈ
  </button>
  <button
    onClick={[Function]}
  >
    ᛉ
  </button>
  <button
    onClick={[Function]}
  >
    ᛋ
  </button>
  <button
    onClick={[Function]}
  >
    ᚴ
  </button>
  <button
    onClick={[Function]}
  >
    ᛏ
  </button>
  <button
    onClick={[Function]}
  >
    ᛒ
  </button>
  <button
    onClick={[Function]}
  >
    ᛖ
  </button>
  <button
    onClick={[Function]}
  >
    ᛗ
  </button>
  <button
    onClick={[Function]}
  >
    ᛚ
  </button>
  <button
    onClick={[Function]}
  >
    ᛝ
  </button>
  <button
    onClick={[Function]}
  >
    ᛟ
  </button>
  <button
    onClick={[Function]}
  >
    ᛞ
  </button>
  <button
    onClick={[Function]}
  >
    ᚪ
  </button>
  <button
    onClick={[Function]}
  >
    ᚫ
  </button>
  <button
    onClick={[Function]}
  >
    ᚣ
  </button>
  <button
    onClick={[Function]}
  >
    ᛠ
  </button>
  <button
    onClick={[Function]}
  >
    :
  </button>
</section>
`;

exports[`RunicKey component Matches snapshot: Younger Futhark 1`] = `
<section>
  <header>
    <h1>
      Younger Futhark
    </h1>
    <p>
      Translate runes to text
    </p>
  </header>
  <p>
    
  </p>
  <button
    onClick={[Function]}
  >
    ᚠ
  </button>
  <button
    onClick={[Function]}
  >
    ᚢ
  </button>
  <button
    onClick={[Function]}
  >
    ᚦ
  </button>
  <button
    onClick={[Function]}
  >
    ᚬ
  </button>
  <button
    onClick={[Function]}
  >
    ᚱ
  </button>
  <button
    onClick={[Function]}
  >
    ᚴ
  </button>
  <button
    onClick={[Function]}
  >
    ᚼ
  </button>
  <button
    onClick={[Function]}
  >
    ᚾ
  </button>
  <button
    onClick={[Function]}
  >
    ᛁ
  </button>
  <button
    onClick={[Function]}
  >
    ᛅ
  </button>
  <button
    onClick={[Function]}
  >
    ᛋ
  </button>
  <button
    onClick={[Function]}
  >
    ᛏ
  </button>
  <button
    onClick={[Function]}
  >
    ᛒ
  </button>
  <button
    onClick={[Function]}
  >
    ᛘ
  </button>
  <button
    onClick={[Function]}
  >
    ᛚ
  </button>
  <button
    onClick={[Function]}
  >
    ᛦ
  </button>
  <button
    onClick={[Function]}
  >
    :
  </button>
</section>
`;
